force-app/main/default/objects/I_RS_Profile__c/I_RS_Profile__c.object-meta.xml
<CustomObject>
    <description>This object will hold the Academic profile for a Researcher sourced from Symplectic. JIRA ticket - https://eawebdev.atlassian.net/browse/T2-866</description>
    <label>Profile</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profiles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>