force-app/main/default/objects/I_RS_Profile__c/fields/I_RS_Bio__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Bio__c</fullName>
    <description>Bio field (a.k.a. About - Overview field)</description>
    <label>Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>