force-app/main/default/objects/I_RS_Profile__c/fields/I_RS_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Researcher_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>