force-app/main/default/objects/I_RS_Profile__c/fields/I_RS_Expertise__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Expertise__c</fullName>
    <description>Labels on their person from the “Expertise” labels scheme - in a single field</description>
    <label>Expertise</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>