force-app/main/default/objects/I_RS_Profile__c/fields/I_RS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_External_Id__c</fullName>
    <description>Proprietary Id of the profile from Symplectic elements which will be stored as External Id in Salesforce for Profile records</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>