force-app/main/default/objects/I_RS_Profile__c/fields/I_RS_Research_Interests__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Interests__c</fullName>
    <label>Research Interests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>