force-app/main/default/objects/I_RS_Profile__c/fields/I_RS_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_URL__c</fullName>
    <description>This field will hold the Academic profile link to MyPUBS</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>